区画・街並ページ_追加

--- a/layout.html
+++ b/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>コンセプト | GRANCIA志木 ～自由設計の土地分譲～</title>                                                               <!-- タイトルの頭に【...】はつけない -->
+    <title>区画・街並 | GRANCIA志木 ～自由設計の土地分譲～</title>                                                               <!-- タイトルの頭に【...】はつけない -->
     <link rel="icon" href="images/favicon.ico">                                                   <!-- 32px x 32px -->
     <link rel="apple-touch-icon" type="image/png" href="images/sns/apple-touch-icon/grancia.jpg"> <!-- 120px x 120px -->
 
@@ -14,10 +14,10 @@
 賑やかな駅前エリアは大型施設以外にも、駅東口には「しきアロハ商店会」、南口には「志木駅南口商店会」といった商店街があり、個性豊かな店舗が並びます。">
 
     <meta property="og:locale"       content="ja_JP"/>
-    <meta property="og:url"          content="https://www.jyu-g.co.jp/special/kashiwacho4_1/concept.html">
+    <meta property="og:url"          content="https://www.jyu-g.co.jp/special/kashiwacho4_1/layout.html">
     <meta property="og:type"         content="article">                                         <!-- Top：website、下層ページ：article -->
     <meta property="og:site_name"    content="住協グループの住まい情報"/>                         <!-- ページが属する大元のサイト名 -->
-    <meta property="og:title"        content="コンセプト | GRANCIA志木 ～自由設計の土地分譲～">                                <!-- SNS表示用のタイトル -->
+    <meta property="og:title"        content="区画・街並 | GRANCIA志木 ～自由設計の土地分譲～">                                <!-- SNS表示用のタイトル -->
     <meta property="og:description"  content="「志木」駅東口から市役所へと至るエリア。まさに暮らしの中枢ともいえる施設や機能が集約されたアドレスです。
 賑やかな駅前エリアは大型施設以外にも、駅東口には「しきアロハ商店会」、南口には「志木駅南口商店会」といった商店街があり、個性豊かな店舗が並びます。">                                                <!-- 通常のdescriptionと同じ内容 -->
     <meta property="og:image"        content="images/sns/share.jpg">                            <!-- SNS表示用のサムネイル 1200px × 630px -->
@@ -62,8 +62,8 @@
                 <!-- 2. 未実装・非公開ページが存在する場合、対象aタグに「.-grayOut」を付与する。 -->
 
                 <li><a class="s-SS -ws-n -left"              href="index.html"><span     class="s-M pdr5 pdr4s">TOP</span>トップ</a></li>
-				<li><a class="s-SS -ws-n -left -active"      href="concept.html"><span   class="s-M pdr5 pdr4s">CONCEPT</span>コンセプト</a></li>
-				<li><a class="s-SS -ws-n -left"              href="layout.html"><span    class="s-M pdr5 pdr4s">LAYOUT</span>区画・街並</a></li>
+				<li><a class="s-SS -ws-n -left"              href="concept.html"><span   class="s-M pdr5 pdr4s">CONCEPT</span>コンセプト</a></li>
+				<li><a class="s-SS -ws-n -left -active"      href="layout.html"><span    class="s-M pdr5 pdr4s">LAYOUT</span>区画・街並</a></li>
 				<li><a class="s-SS -ws-n -left"              href="plan.html"><span      class="s-M pdr5 pdr4s">FREEPLAN</span>自由設計</a></li>
 				<li><a class="s-SS -ws-n -left"              href="equipment.html"><span class="s-M pdr5 pdr4s">EQUIPMENT</span>設備・仕様</a></li>
                 <li><a class="s-SS -ws-n -left"              href="location.html"><span  class="s-M pdr5 pdr4s">LOCATION</span>周辺環境</a></li>
@@ -129,14 +129,14 @@
                         </a>
                     </li>
                     <li class="navItem">
-                        <a href="concept.html" class="-active navItem__link -lh-1">
+                        <a href="concept.html" class="navItem__link -lh-1">
                             <span class="navItem-title -main s-M -s-nav">コンセプト</span>
                             <br>
                             <span class="navItem-title -sub s-SS -s-nav">CONCEPT</span>
                         </a>
                     </li>
                     <li class="navItem">
-                        <a href="layout.html" class="navItem__link -lh-1">
+                        <a href="layout.html" class="-active navItem__link -lh-1">
                             <span class="navItem-title -main s-M -s-nav">区画・街並</span>
                             <br>
                             <span class="navItem-title -sub s-SS -s-nav">LAYOUT</span>
@@ -201,7 +201,7 @@
 
         <div class="c-contents -f-view w1100 mgb3 mgb5s">
             <div class="imgBox a-fade-blur">
-                <img src="images/f-view/f-view_concept.jpg">
+                <img src="images/f-view/f-view_layout.jpg">
             </div>
             <p class="s-SS -right">※イメージ</p>
             <!-- SPのみ / ページタイトル -->
@@ -211,47 +211,70 @@
         <div class="c-contents w1100 w95 mgb10 mgb10s">
             <div class="c-contents-inner mgb20 mgb20s">
                 <!-- コンテンツ > タイトル -->
-                <h2 class="c-contents_MainTitle -icon -color02 -left -lh-n pdl3 pdl6s mgb2 mgb3s a-fadeUp -sc4">
-                    教育先進区　文教の街・志木
+                <h2 class="c-contents_MainTitle -icon -row02_s -color02 -left -lh-n pdl3 pdl6s mgb2 mgb3s a-fadeUp -sc4">
+                    駅前の商業利便だけでなく、<br class="sp">暮らしを支える施設が充実
                 </h2>
                 <!-- コンテンツ > 説明 -->
                 <p class="s-M -f-gothic -left -lh-2 a-fadeUp -sc4">
-                    志木市は、県内初の全校一斉小中一貫教育をスタートさせた教育先進区です。9年間の教育課程のなかで、授業の改善や進学の不安解消、具体的には「中１ギャップ」の解消などの為の小中一貫教育を、学校統廃合を伴わないかたちでスタート。<br><br>
-                    また、「志木」駅周辺には、埼玉県有数の進学校として知られる「慶応義塾志木高等学校」をはじめ、「立教大学 新座キャンパス」、「立教新座中学校・高等学校」が立地しており、文教エリアとしても知られています。そんな教育に力を入れている場所柄、教育熱心な家庭も多く、「志木」駅周辺には学習塾や幼児教室も多く点在しています。
+                    「志木」駅東口から市役所へと至るエリア。まさに暮らしの中枢ともいえる施設や機能が集約されたアドレスです。
+                    賑やかな駅前エリアは大型施設以外にも、駅東口には「しきアロハ商店会」、南口には「志木駅南口商店会」といった商店街があり、個性豊かな店舗が並びます。<br class="tb-pc">
+                    『<span class="s-M -white -grancia">GRANCIA</span>志木』は、駅前の賑わいから程よく離れた、穏やかで落ち着きのあるエリアに誕生します。
                 </p>
             </div>
-            <!-- ---------------- 【志木市独自の主な取り組み 】 ------------------- -->
-            <h2 class="c-contents_title -torikumi -color02 -b-btm -c02 -center mgb10 mgb15s">志木市独自の主な取り組み</h2>
-            <div class="imgBox mgb10 mgb10s a-fadeUp -sc-auto"><img src="images/item/concept/concept01-min.png" alt=""></div>
-            <div class="c-contents mgb10 mgb10s">
-                <article class="mgb20 mgb20s">
-                    <ul class="c-flex -h-c_pc -col1_2 -r mgb10 mgb10s">
-                        <li class="flexItem mgb5s a-flipRight -sc4">
+            <!-- ---------------- 【全体区画図】 ------------------- -->
+            <h2 class="c-contents_title -landscape -color02 -b-btm -c02 -center mgb10 mgb15s">全体区画図</h2>
+            <div class="imgBox w75 w85s mgb5 mgb10s a-fadeUp -sc-auto"><img src="images/pic/layout/layout-01.jpg" alt=""></div>
+            <div class="c-contents w85 mgb10 mgb20s">
+                <article>
+                    <ul class="c-flex -h-c_pc -jc-sb -col2_4 mgb5 mgb5s">
+                        <li class="flexItem mgb5s a-flipRight -sc-auto">
                             <div class="imgBox">
-                                <img src="images/pic/concept/concept02.png" alt="">
+                                <img src="images/SVG/layout-01_btm01.svg" alt="多彩なプランニングが可能　全区画土地面積30坪越">
+                            </div>
+                        </li>
+                        <li class="flexItem mgb5s a-flipLeft -sc4">
+                            <div class="imgBox">
+                                <img src="images/SVG/layout-01_btm02.svg" alt="資産価値が高く、人気のある整形地">
+                            </div>
+                        </li>
+                        <li class="flexItem mgb5s a-flipRight -sc-auto">
+                            <div class="imgBox">
+                                <img src="images/SVG/layout-01_btm03.svg" alt="3路線利用可能で、都心へのアクセスがスムーズ 「池袋」駅まで最短21分">
+                            </div>
+                        </li>
+                        <li class="flexItem mgb5s a-flipLeft -sc4">
+                            <div class="imgBox">
+                                <img src="images/SVG/layout-01_btm04.svg" alt="小学校・幼稚園・各買い物施設　徒歩圏">
+                            </div>
+                        </li>
+                    </ul>
+                    <p class="s-L -center">売主物件につき仲介手数料はいただきません</p>
+                </article>
+            </div>
+            <!-- ---------------- 【地盤の強い安心な武蔵野台地】 ------------------- -->
+            <h2 class="c-contents_title -ground -color03 -b-btm -c03 -center mgb10 mgb15s">地盤の強い安心な武蔵野台地</h2>
+            <div class="c-contents mgb20 mgb20s">
+                <article>
+                    <ul class="c-flex -h-c_pc -col1_2 mgb5 mgb10s">
+                        <li class="flexItem mgb5s a-flipLeft -sc4">
+                            <div class="imgBox w95s">
+                                <img src="images/pic/layout/layout-02.jpg" alt="開発現場の周辺MAP">
                             </div>
                             <p class="-right a-fade -sp4"><span class="s-kome">※イメージ</span></p>
                         </li>
-                        <li class="flexItem a-flipLeft -sc4">
-                            <img src="images/pic/concept/concept01.png" alt="「放課後志木っ子タイム」放課後学習教室の事業も展開しています。">
+                        <li class="flexItem a-flipRight -sc4">
+                            <div class="imgBox w85 w95s">
+                                <img src="images/pic/layout/layout-03.png" alt="志木市南西部は標高10ｍ～20ｍの台地です。">
+                            </div>
                         </li>
                     </ul>
+                    <div class="w95s">
+                        <p class="s-L -b -color03 -left mgb2 mgb2s">志木市の地形・地質と住宅地盤</p>
+                        <p class="s-M -color03 -left -lh-2">
+                            比較的海抜高度が高く起伏の少ない平坦面で、関東ローム層と呼ばれる火山灰土で覆われています。関東ローム層は、上部の赤土（ローム土）と下部の凝灰粘土に大別されるが、自然蓄積した赤土（ローム土）は安定しており比較的大きな強度が期待できるため、表土部分に注意すれば住宅地盤として良好な場合が多いです。
+                        </p>
+                    </div>
                 </article>
-
-                <!-- <article>
-                    <ul class="c-flex -h-c_pc -col2_2">
-                        <li class="">
-                            <p class="c-contents_subTitle s-L -left mgb5 mgb5s a-fadeLeft -sc40">コンテンツアイテム_タイトル</p>
-                            <p class="s-M -lh-2 -lh-1_5_s -left a-fadeLeft -sc40">
-                                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト。
-                            </p>
-                        </li>
-                        <li class="a-flipRight -sc40">
-                            <img src="https://via.placeholder.com/475x320/?text=480x320">
-                            <p class="-right a-fade -sp4"><span class="s-kome -color03">※イメージ</span></p>
-                        </li>
-                    </ul>
-                </article> -->
             </div>
         </div>
     </main>
