各ページ > モーダル_追加

--- a/concept.html
+++ b/concept.html
@@ -369,5 +369,22 @@
     </footer>
     <!-- //footer -->
 
+            <!---------- モーダル関係 ---------->
+            <div class="">
+                <input type="checkbox" id="popup02" ><!-- popup01 -->
+                <label class="popup-overlay" for="popup02"></label>
+                <div class="popup-window">
+                    <!-- 閉じるボタン -->
+                    <label class="popup-close" for="popup02">
+                        <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg">
+                            <line x1="0" y1="0" x2="18" y2="18" stroke="white" stroke-width="3"></line>
+                            <line x1="0" y1="18" x2="18" y2="0" stroke="white" stroke-width="3"></line>
+                        </svg>
+                    </label>
+                    <!-- iframe -->
+                    <iframe id="inlineFrame01" title="Inline Frame Example" src="https://www.jyu-g.co.jp/contents/detail/712972338"></iframe>
+                </div>
+            </div>
+
 </body>
 </html>
