--- a/layout.html
+++ b/layout.html
@@ -327,12 +327,12 @@
                         </a>
                     </li>
                     <li class="navItem_footer mgb2">
-                        <a href="concept.html" class="-active -lh-1 -center">
+                        <a href="concept.html" class="-lh-1 -center">
                             <span class="s-S -s-nav">コンセプト</span>
                         </a>
                     </li>
                     <li class="navItem_footer mgb2">
-                        <a href="layout.html" class="-lh-1 -center">
+                        <a href="layout.html" class="-active -lh-1 -center">
                             <span class="s-S -s-nav">区画・街並</span>
                         </a>
                     </li>
@@ -391,6 +391,23 @@
         </div>
     </footer>
     <!-- //footer -->
+
+            <!---------- モーダル関係 ---------->
+            <div class="">
+                <input type="checkbox" id="popup02" ><!-- popup01 -->
+                <label class="popup-overlay" for="popup02"></label>
+                <div class="popup-window">
+                    <!-- 閉じるボタン -->
+                    <label class="popup-close" for="popup02">
+                        <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg">
+                            <line x1="0" y1="0" x2="18" y2="18" stroke="white" stroke-width="3"></line>
+                            <line x1="0" y1="18" x2="18" y2="0" stroke="white" stroke-width="3"></line>
+                        </svg>
+                    </label>
+                    <!-- iframe -->
+                    <iframe id="inlineFrame01" title="Inline Frame Example" src="https://www.jyu-g.co.jp/contents/detail/712972338"></iframe>
+                </div>
+            </div>
 
 </body>
 </html>
