--- a/layout.html
+++ b/layout.html
@@ -73,10 +73,10 @@
 
                 <!-- 物件概要はここには設置しないこと -->
                 <div class="c-hnav__contactArea">
-                    <a href="https://www.jyu-g.co.jp/contents/inquiry?checkid=物件ナンバー" class="c-hnav__top navItem -lh-1">
+                    <a href="https://www.jyu-g.co.jp/contents/inquiry?checkid=712998784" class="c-hnav__top navItem -lh-1">
                         <span class="navItem-cTitle -main s-M">資料請求</span><br><span class="navItem-cTitle -sub s-SS">REQUEST</span>
                     </a>
-                    <a href="https://www.jyu-g.co.jp/contents/tour?checkid=物件ナンバー" class="c-hnav__bottom navItem -lh-1">
+                    <a href="https://www.jyu-g.co.jp/contents/tour?checkid=712998784" class="c-hnav__bottom navItem -lh-1">
                         <span class="navItem-cTitle -main s-M">見学予約</span><br><span class="navItem-cTitle -sub s-SS">RESERV</span>
                     </a>
                 </div>
@@ -103,12 +103,12 @@
                         </div>
                     </li>
                     <li class="c-header__contactArea -borderVer">
-                        <a href="https://www.jyu-g.co.jp/contents/inquiry?checkid=物件ナンバー" class="top-left navItem -lh-1">
+                        <a href="https://www.jyu-g.co.jp/contents/inquiry?checkid=712998784" class="top-left navItem -lh-1">
                             <span class="navItem-cTitle -main s-M -s-nav">資料請求</span>
                             <br>
                             <span class="navItem-cTitle -sub s-SS -s-nav">REQUEST</span>
                         </a>
-                        <a href="https://www.jyu-g.co.jp/contents/tour?checkid=物件ナンバー" class="top-right navItem -lh-1">
+                        <a href="https://www.jyu-g.co.jp/contents/tour?checkid=712998784" class="top-right navItem -lh-1">
                             <span class="navItem-cTitle -main s-M -s-nav">見学予約</span>
                             <br>
                             <span class="navItem-cTitle -sub s-SS -s-nav">RESERV</span>
@@ -287,21 +287,21 @@
             <div class="c-footer__contactArea">
                 <ul class="c-footer__contactLists">
                     <li class="contactItem">
-                        <a href="https://www.jyu-g.co.jp/contents/inquiry?checkid=物件ナンバー" class="-lh-1">
+                        <a href="https://www.jyu-g.co.jp/contents/inquiry?checkid=712998784" class="-lh-1">
                             <span class="contactItem_main s-L -s-nav">資料請求</span>
                             <br>
                             <span class="contactItem_sub s-SS -s-nav">REQUEST</span>
                         </a>
                     </li>
                     <li class="contactItem">
-                        <a href="https://www.jyu-g.co.jp/contents/tour?checkid=物件ナンバー" class="-lh-1">
+                        <a href="https://www.jyu-g.co.jp/contents/tour?checkid=712998784" class="-lh-1">
                             <span class="contactItem_main s-L -s-nav">見学予約</span>
                             <br>
                             <span class="contactItem_sub s-SS -s-nav">RESERV</span>
                         </a>
                     </li>
                     <li class="tb-pc contactItem">
-                        <a href="https://www.jyu-g.co.jp/contents/inquiry?checkid=物件ナンバー" class="-lh-1">
+                        <a href="https://www.jyu-g.co.jp/contents/inquiry?checkid=712998784" class="-lh-1">
                             <span class="contactItem_main s-L -s-nav">お問い合わせ</span>
                             <br>
                             <span class="contactItem_sub s-SS -s-nav">INQUIRY</span>
