物件情報_更新

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GRANCIA志木 ～自由設計の土地分譲～</title>                                                               <!-- タイトルの頭に【...】はつけない -->
+    <title>GRANCIA志木 ～志木市柏町4丁目～</title>                                                               <!-- タイトルの頭に【...】はつけない -->
     <link rel="icon" href="images/favicon.ico">                                                   <!-- 32px x 32px -->
     <link rel="apple-touch-icon" type="image/png" href="images/sns/apple-touch-icon/grancia.jpg"> <!-- 120px x 120px -->
 
     <!-- デプロイ前に確認・サンプル -->
-    <meta name="keywords" content="志木市,地名,建築条件付き土地,グランシア,住協">
+    <meta name="keywords" content="志木市,柏町,東武東上線,柳瀬川駅,北朝霞駅,朝霞台駅,みずほ台,建築条件付土地,グランシア,住協">
     <meta name="description" content="「志木」駅東口から市役所へと至るエリア。まさに暮らしの中枢ともいえる施設や機能が集約されたアドレスです。
 賑やかな駅前エリアは大型施設以外にも、駅東口には「しきアロハ商店会」、南口には「志木駅南口商店会」といった商店街があり、個性豊かな店舗が並びます。">
     <link rel="canonical" href="https://www.jyu-g.co.jp/special/kashiwacho4_1/">
@@ -19,7 +19,7 @@
     <meta property="og:url"          content="https://www.jyu-g.co.jp/special/kashiwacho4_1/">
     <meta property="og:type"         content="website">                                         <!-- Top：website、下層ページ：article -->
     <meta property="og:site_name"    content="住協グループの住まい情報"/>                         <!-- ページが属する大元のサイト名 -->
-    <meta property="og:title"        content="GRANCIA志木 ～自由設計の土地分譲～">                                <!-- SNS表示用のタイトル -->
+    <meta property="og:title"        content="GRANCIA志木 ～志木市柏町4丁目～">                                <!-- SNS表示用のタイトル -->
     <meta property="og:description"  content="「志木」駅東口から市役所へと至るエリア。まさに暮らしの中枢ともいえる施設や機能が集約されたアドレスです。
 賑やかな駅前エリアは大型施設以外にも、駅東口には「しきアロハ商店会」、南口には「志木駅南口商店会」といった商店街があり、個性豊かな店舗が並びます。">                                                <!-- 通常のdescriptionと同じ内容 -->
     <meta property="og:image"        content="images/sns/share.jpg">                            <!-- SNS表示用のサムネイル 1200px × 630px -->
